--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gulp-plumber": "1.1.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
-    "vinyl-source-stream": "1.1.0"
+    "vinyl-source-stream": "1.1.0",
+    "flux": "~2.1.1",
+    "object-assign": "~4.1.0"
   },
   "devDependencies": {},
   "scripts": {
