--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "15.0.2",
     "vinyl-source-stream": "1.1.0",
     "flux": "~2.1.1",
-    "object-assign": "~4.1.0"
+    "object-assign": "~4.1.0",
+    "react-addons-update": "~15.0.2"
   },
   "devDependencies": {},
   "scripts": {
