--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "sudo node ./build/server/server.js",
+    "start": "node ./build/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bovtik",
